adicionado 2 linhas ao arquivo index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <li>Desenvolvimento</li>
         <li>Redes</li>
         <li>PowerBI</li>
+        <li>Word</li>
+        <li>PowerPoint</li>
     </ul>
 </body>
 </html>
