adicionado mais duas linhas ao incdx.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <li>PowerBI</li>
         <li>Word</li>
         <li>PowerPoint</li>
+        <li>Espanhol</li>
+        <li>Ingles</li>
     </ul>
 </body>
 </html>
