foi adicionado mais uma linha ao index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li>PowerPoint</li>
         <li>Espanhol</li>
         <li>Ingles</li>
+        <li>Frances</li>
     </ul>
 </body>
 </html>
