--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <li>Ingles</li>
         <li>Frances</li>
         <li>Alemao</li>
+        <li>Excel</li>
+        <li>Excek Avancado
+        </li>
     </ul>
 </body>
 </html>
