--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <li>Ingles</li>
         <li>Frances</li>
         <li>Alemao</li>
+        <li>Alem</li>
+        <li>Alema</li>
     </ul>
 </body>
 </html>
