foi adicionado mais uma linha e apagado uma no index.html

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <li>PowerPoint</li>
         <li>Espanhol</li>
         <li>Ingles</li>
-        <li>Frances</li>
         <li>Alemaosss</li>
         <li>Alema</li>
+        <li>Educacao Fisica</li>
     </ul>
 </body>
 </html>
